--- a/project.html
+++ b/project.html
@@ -1,73 +1,168 @@
-<HEADER>
-<TITLE>The World Wide Web project</TITLE>
-<NEXTID N="55">
-</HEADER>
-<BODY>
-<H1>World Wide Web</H1>The WorldWideWeb (W3) is a wide-area<A
-NAME=0 HREF="WhatIs.html">
-hypermedia</A> information retrieval
-initiative aiming to give universal
-access to a large universe of documents.<P>
-Everything there is online about
-W3 is linked directly or indirectly
-to this document, including an <A
-NAME=24 HREF="Summary.html">executive
-summary</A> of the project, <A
-NAME=29 HREF="Administration/Mailing/Overview.html">Mailing lists</A>
-, <A
-NAME=30 HREF="Policy.html">Policy</A> , November's  <A
-NAME=34 HREF="News/9211.html">W3  news</A> ,
-<A
-NAME=41 HREF="FAQ/List.html">Frequently Asked Questions</A> .
-<DL>
-<DT><A
-NAME=44 HREF="../DataSources/Top.html">What's out there?</A>
-<DD> Pointers to the
-world's online information,<A
-NAME=45 HREF="../DataSources/bySubject/Overview.html"> subjects</A>
-, <A
-NAME=z54 HREF="../DataSources/WWW/Servers.html">W3 servers</A>, etc.
-<DT><A
-NAME=46 HREF="Help.html">Help</A>
-<DD> on the browser you are using
-<DT><A
-NAME=13 HREF="Status.html">Software Products</A>
-<DD> A list of W3 project
-components and their current state.
-(e.g. <A
-NAME=27 HREF="LineMode/Browser.html">Line Mode</A> ,X11 <A
-NAME=35 HREF="Status.html#35">Viola</A> ,  <A
-NAME=26 HREF="NeXT/WorldWideWeb.html">NeXTStep</A>
-, <A
-NAME=25 HREF="Daemon/Overview.html">Servers</A> , <A
-NAME=51 HREF="Tools/Overview.html">Tools</A> ,<A
-NAME=53 HREF="MailRobot/Overview.html"> Mail robot</A> ,<A
-NAME=52 HREF="Status.html#57">
-Library</A> )
-<DT><A
-NAME=47 HREF="Technical.html">Technical</A>
-<DD> Details of protocols, formats,
-program internals etc
-<DT><A
-NAME=40 HREF="Bibliography.html">Bibliography</A>
-<DD> Paper documentation
-on  W3 and references.
-<DT><A
-NAME=14 HREF="People.html">People</A>
-<DD> A list of some people involved
-in the project.
-<DT><A
-NAME=15 HREF="History.html">History</A>
-<DD> A summary of the history
-of the project.
-<DT><A
-NAME=37 HREF="Helping.html">How can I help</A> ?
-<DD> If you would like
-to support the web..
-<DT><A
-NAME=48 HREF="../README.html">Getting code</A>
-<DD> Getting the code by<A
-NAME=49 HREF="LineMode/Defaults/Distribution.html">
-anonymous FTP</A> , etc.</A>
-</DL>
-</BODY>
+<header>
+    <title>
+        The World Wide Web project
+    </title>
+    <nextid n="55" />
+</header>
+
+<body>
+    <h1>
+        World Wide Web
+    </h1>
+    The WorldWideWeb (W3) is a wide-area
+    <a href="WhatIs.html" name="0">
+        hypermedia
+    </a>
+    information retrieval
+    initiative aiming to give universal
+    access to a large universe of documents.
+    <p>
+        Everything there is online about
+        W3 is linked directly or indirectly
+        to this document, including an
+        <a href="Summary.html" name="24">
+            executive
+            summary
+        </a>
+        of the project,
+        <a href="Administration/Mailing/Overview.html" name="29">
+            Mailing lists
+        </a>
+        ,
+        <a href="Policy.html" name="30">
+            Policy
+        </a>
+        , November's
+        <a href="News/9211.html" name="34">
+            W3 news
+        </a>
+        ,
+        <a href="FAQ/List.html" name="41">
+            Frequently Asked Questions
+        </a>
+        .
+    <dl>
+        <dt>
+            <a href="../DataSources/Top.html" name="44">
+                What's out there?
+            </a>
+        <dd>
+            Pointers to the
+            world's online information,
+            <a href="../DataSources/bySubject/Overview.html" name="45">
+                subjects
+            </a>
+            ,
+            <a href="../DataSources/WWW/Servers.html" name="z54">
+                W3 servers
+            </a>
+            , etc.
+        <dt>
+            <a href="Help.html" name="46">
+                Help
+            </a>
+        <dd>
+            on the browser you are using
+        <dt>
+            <a href="Status.html" name="13">
+                Software Products
+            </a>
+        <dd>
+            A list of W3 project
+            components and their current state.
+            (e.g.
+            <a href="LineMode/Browser.html" name="27">
+                Line Mode
+            </a>
+            ,X11
+            <a href="Status.html#35" name="35">
+                Viola
+            </a>
+            ,
+            <a href="NeXT/WorldWideWeb.html" name="26">
+                NeXTStep
+            </a>
+            ,
+            <a href="Daemon/Overview.html" name="25">
+                Servers
+            </a>
+            ,
+            <a href="Tools/Overview.html" name="51">
+                Tools
+            </a>
+            ,
+            <a href="MailRobot/Overview.html" name="53">
+                Mail robot
+            </a>
+            ,
+            <a href="Status.html#57" name="52">
+                Library
+            </a>
+            )
+        <dt>
+            <a href="Technical.html" name="47">
+                Technical
+            </a>
+        <dd>
+            Details of protocols, formats,
+            program internals etc
+        <dt>
+            <a href="Bibliography.html" name="40">
+                Bibliography
+            </a>
+        <dd>
+            Paper documentation
+            on W3 and references.
+        <dt>
+            <a href="People.html" name="14">
+                People
+            </a>
+        <dd>
+            A list of some people involved
+            in the project.
+        <dt>
+            <a href="History.html" name="15">
+                History
+            </a>
+        <dd>
+            A summary of the history
+            of the project.
+        <dt>
+            <a href="Helping.html" name="37">
+                How can I help
+            </a>
+            ?
+        <dd>
+            If you would like
+            to support the web..
+        <dt>
+            <a href="../README.html" name="48">
+                Getting code
+            </a>
+        <dd>
+            Getting the code by
+            <a href="LineMode/Defaults/Distribution.html" name="49">
+                anonymous FTP
+            </a>
+            , etc.
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+        </dd>
+        </dt>
+    </dl>
+    </p>
+</body>
