small margin fix

--- a/project.html
+++ b/project.html
@@ -1,6 +1,10 @@
 <h1>
     World Wide Web
 </h1>
+<p>Alperen</p>
+<p>Keles</p>
+<p>Clear</p>
+<a href="Clear">Alperen</a>
 <h1>
     World Wide Web
 </h1>
