updates to rendering model

--- a/project.html
+++ b/project.html
@@ -1,13 +1,8 @@
-<h1>
-    World Wide Web
-</h1>
-<p>Alperen</p>
-<p>Keles</p>
-<p>Clear</p>
-<a href="Clear">Alperen</a>
-<h1>
-    World Wide Web
-</h1>
-<h1>
-    World Wide Web
-</h1>
+
+The WorldWideWeb    (W3) is a wide-area
+<a href="WhatIs.html" name="0">
+hypermedia
+</a>
+information retrieval
+initiative aiming to give universal
+access to a large universe of documents.
