RENDER A NICE CHUNK

--- a/project.html
+++ b/project.html
@@ -1,8 +1,36 @@
-
-The WorldWideWeb    (W3) is a wide-area
-<a href="WhatIs.html" name="0">
-hypermedia
-</a>
-information retrieval
-initiative aiming to give universal
-access to a large universe of documents.
+<h1>
+    World Wide Web
+</h1>
+<p>
+    The WorldWideWeb (W3) is a wide-area
+    <a href="WhatIs.html" name="0">
+        hypermedia
+    </a>
+    information retrieval initiative aiming to give universal access to a large universe of documents.
+</p>
+<p>
+    Everything there is online about
+    W3 is linked directly or indirectly
+    to this document, including an
+    <a href="Summary.html" name="24">
+        executive
+        summary
+    </a>
+    of the project,
+    <a href="Administration/Mailing/Overview.html" name="29">
+        Mailing lists
+    </a>
+    ,
+    <a href="Policy.html" name="30">
+        Policy
+    </a>
+    , November's
+    <a href="News/9211.html" name="34">
+        W3 news
+    </a>
+    ,
+    <a href="FAQ/List.html" name="41">
+        Frequently Asked Questions
+    </a>
+    .
+</p>
